<resources>
    <string name="app_name">Course Portal</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Sorry, Check Internet Connection</string>
    <string name="server_error">Server Error, Try again</string>

    <!-- Strings related to RegisterActivity -->
    <string name="title_activity_register">Register</string>
    <string name="register_title">Create Your Account</string>
    <string name="prompt_id">Red ID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_c_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="register_clear">Reset</string>
    <string name="error_password_length">Minimum 6 characters</string>
    <string name="error_password_match">Passwords did not match</string>
    <string name="error_existing_user">Account already Exists</string>
    <string name="error_invalid_user">Invalid Red Id</string>

    <!-- Strings related to LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="title_login">Setup Your Account</string>
    <string name="login_submit">Log In</string>
    <string name="login_title2">Don\'t have an account yet?</string>
    <string name="action_sign_in">Sign In</string>
    <string name="invalid_credentials">Invalid Username / Password</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">Required field</string>
    <string name="title_activity_course">CourseActivity</string>

    <!-- Strings related to MainActivity -->
    <string name="title_course">My Courses</string>
    <string name="title_recent">Recent Announcements</string>
    <string name="title_load_button">Show More</string>
    <string name="title_post_button">Add Post/Email</string>
    <string name="title_grade_button">Add Grades</string>
    <string name="not_enrolled">Sorry, You are currently not enrolled in any course</string>

    <!-- Strings related to CourseActivity -->
    <string name="title_post">Announcements</string>
    <string name="title_about">About Course</string>
    <string name="title_enrolled">Enrolled Students</string>
    <string name="title_grade">Grades</string>
    <string name="title_activity_professor_main">ProfessorMainActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_no_posts">No Announcements</string>
    <string name="title_no_grades">Grades are not posted</string>
    <string name="title_no_students">No enrollments</string>

    <!-- Strings related to SettingsActivity -->
    <string name="title_enableSecurity">Security Lock</string>
    <string name="title_removeAccount">Remove Account</string>
    <string name="title_about_app">About Course Portal</string>
    <string name="title_dialog">Set Passcode</string>
    <string name="title_dialog_pwd">Enter 4 - digit Passcode</string>

    <!-- Strings related to PasswordActivity -->
    <string name="title_p_dialog">Passcode</string>
    <string name="title_activity_grade">Add Grades</string>

    <!-- Strings related to GradeActivity & AddGradeActivity -->
    <string name="title_select_course">Select Course</string>
    <string name="title_select_option">Grade Items</string>
    <string name="title_activity_add_grade">AddGradeActivity</string>
    <string name="title_clear_button">Clear All</string>
    <string name="title_done_button">Done</string>
    <string name="title_save_button">Save</string>

</resources>
