<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFE5F0"
    tools:context="com.bhavanavennamaneni.courseportal.CourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:id="@+id/c_aboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:padding="5dp"
                    android:text="@string/title_about"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/c_downAbout"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/down" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/c_aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/c_aboutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3F3E8"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <TableLayout
            android:id="@+id/c_enrolledTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_dark"
            android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:id="@+id/c_enrolledTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:padding="5dp"
                    android:text="@string/title_enrolled"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/c_downEnrolled"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/down" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/c_enrolledLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3E8"
            android:orientation="vertical"
            android:padding="5dp">

            <ListView
                android:id="@+id/c_enrolledList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:divider="@android:color/black"
                android:listSelector="@android:color/holo_blue_light" />


        </LinearLayout>

        <TableLayout
            android:id="@+id/c_gradeTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_dark"
            android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:id="@+id/c_gradeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_dark"
                    android:padding="5dp"
                    android:text="@string/title_grade"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/c_downGrade"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/down" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/c_gradeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3E8"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/c_gradeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c_postTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title_post"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/c_downPost"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:src="@drawable/down" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/c_postLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/SCROLLER_ID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/c_postView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3F3E8"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>



